erDiagram
    USERS ||--o{ ADDRESSES : "has"
    USERS ||--o| CARTS : "owns"
    USERS ||--o{ ORDERS : "places"
    USERS ||--o{ SUBSCRIPTIONS : "subscribes"
    USERS ||--o{ REVIEWS : "writes"
    USERS ||--o{ NOTIFICATIONS : "receives"
    USERS ||--o{ DELIVERIES : "rider_delivers"

    CATEGORIES ||--o{ PRODUCTS : "groups"
    PRODUCTS ||--o{ PRODUCT_IMAGES : "has"
    PRODUCTS ||--o| NUTRITION_FACTS : "described_by"
    PRODUCTS ||--o{ CART_ITEMS : "in"
    PRODUCTS ||--o{ ORDER_ITEMS : "in"
    PRODUCTS ||--o{ REVIEWS : "receives"

    CARTS ||--o{ CART_ITEMS : "contains"

    ORDERS ||--o{ ORDER_ITEMS : "contains"
    ORDERS ||--o| PAYMENTS : "paid_by"
    ORDERS ||--o{ REVIEWS : "verifies"
    ADDRESSES ||--o{ ORDERS : "ships_to"

    SUBSCRIPTION_PLANS ||--o{ SUBSCRIPTIONS : "defines"
    ADDRESSES ||--o{ SUBSCRIPTIONS : "delivers_to"
    SUBSCRIPTIONS ||--o{ SUBSCRIPTION_PAYMENTS : "billed_by"
    SUBSCRIPTIONS ||--o{ DELIVERIES : "generates"

    ORDERS ||--o| DELIVERIES : "fulfilled_by"
    ADDRESSES ||--o{ DELIVERIES : "delivered_to"

    USERS {
        bigint id PK
        string full_name
        string email UK
        string password_hash
        enum role "admin | customer | rider"
        enum status "active | suspended"
        string phone
        datetime created_at
        datetime updated_at
    }

    ADDRESSES {
        bigint id PK
        bigint user_id FK
        string label
        string recipient_name
        string phone
        string line1
        string line2
        string city
        string state
        string postal_code
        string country
        boolean is_default
    }

    CATEGORIES {
        bigint id PK
        string name
        string slug UK
        string description
        boolean is_active
    }

    PRODUCTS {
        bigint id PK
        bigint category_id FK
        string name
        string slug UK
        text description
        decimal price
        int stock_quantity
        int low_stock_threshold
        boolean is_featured
        boolean is_best_selling
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    PRODUCT_IMAGES {
        bigint id PK
        bigint product_id FK
        string url
        string alt_text
        boolean is_primary
        int sort_order
    }

    NUTRITION_FACTS {
        bigint id PK
        bigint product_id FK
        string serving_size
        int calories
        decimal protein_g
        decimal carbs_g
        decimal fat_g
        decimal fiber_g
        decimal sugar_g
        decimal sodium_mg
        text ingredients
    }

    CARTS {
        bigint id PK
        bigint user_id FK
        datetime created_at
        datetime updated_at
    }

    CART_ITEMS {
        bigint id PK
        bigint cart_id FK
        bigint product_id FK
        int quantity
        decimal unit_price
    }

    ORDERS {
        bigint id PK
        bigint user_id FK
        bigint delivery_address_id FK
        string order_number UK
        enum status "pending | confirmed | preparing | shipped | delivered | cancelled"
        decimal subtotal
        decimal shipping_fee
        decimal tax
        decimal total
        datetime placed_at
        datetime updated_at
    }

    ORDER_ITEMS {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        string product_name
        int quantity
        decimal unit_price
        decimal line_total
    }

    PAYMENTS {
        bigint id PK
        bigint order_id FK
        enum method "card | gcash | paypal | cod"
        enum status "pending | paid | failed | refunded"
        decimal amount
        string transaction_id
        datetime paid_at
    }

    SUBSCRIPTION_PLANS {
        bigint id PK
        string name
        text description
        enum meal_type "vegetarian | high_protein | mixed"
        decimal price
        enum billing_interval "weekly | monthly"
        int meals_per_cycle
        boolean is_active
    }

    SUBSCRIPTIONS {
        bigint id PK
        bigint user_id FK
        bigint plan_id FK
        bigint delivery_address_id FK
        enum status "active | paused | cancelled"
        enum delivery_schedule "daily | weekly | biweekly"
        date start_date
        date next_delivery_date
        date cancelled_at
        datetime created_at
    }

    SUBSCRIPTION_PAYMENTS {
        bigint id PK
        bigint subscription_id FK
        decimal amount
        enum status "pending | paid | failed | refunded"
        date billing_date
        datetime paid_at
    }

    REVIEWS {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        bigint order_id FK
        int rating "1-5"
        text comment
        boolean is_hidden
        datetime created_at
    }

    NOTIFICATIONS {
        bigint id PK
        bigint user_id FK
        enum type "order_update | subscription | promotion | new_order | low_stock | delivery_assigned | system"
        string title
        text message
        boolean is_read
        datetime created_at
    }

    DELIVERIES {
        bigint id PK
        bigint order_id FK "nullable - for one-off orders"
        bigint subscription_id FK "nullable - for recurring deliveries"
        bigint rider_id FK "nullable until assigned"
        bigint delivery_address_id FK
        enum status "pending | assigned | out_for_delivery | delivered | failed"
        datetime assigned_at
        datetime delivered_at
        string proof_image_url
        text delivery_notes
        datetime created_at
        datetime updated_at
    }
